# XMbot

./: .dockerignore  .gitignore  CMakeLists.txt  LICENSE  README.md  dockerfile  install  main.py  requirements.txt  run.py
scripts/: joke.py  main.py  masl.py  wether.py
src/: XMbot.cpp  XMbot.h  XMbotLogicRealiosation.cpp  \  commandHandler.cpp  commandHandler.h  commandList.cpp  commandList.h  configManager.cpp  configManager.h  main.cpp
